# InformationTechnologyTask

./: .gitignore  README.md
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/gpu/: Dockerfile
data/: .~task2.xlsx  task1_config.json  task2.xlsx
scripts/: infer.py  load_data.py  mymodel.py  train.py
src/: CMakeLists.txt  decode.cpp  encode.cpp  infer.py  load_data.py  model.py  train.py  visual.py
src/include/: csv.h  encode.hpp  rapidcsv.h  read_from_excel.hpp
